@@ -3,6 +3,10 @@ Revision history for libev, a high-performance and full-featured event loop.
 TODO: for next ABI/API change, consider moving EV__IOFDSSET into io->fd instead and provide a getter.
 TODO: document EV_TSTAMP_T
 
+	- due to a logic bug, timerfd availability did not always translate
+          into fewer wakeups - libev is now more aggressive in using
+          longer sleeps, even when timerfd is not in use.
+
 4.33 Wed Mar 18 13:22:29 CET 2020
 	- no changes w.r.t. 4.32.
 
